# ggm-inversion

./: .gitignore  CMakeLists.txt  README.md
doc/: analytic_solns.nb  doc.tex
include/: ggm_inversion
include/ggm_inversion_bits/: analytic.hpp  helpers.hpp  l2_optimizer_adam.hpp  l2_optimizer_base.hpp  l2_optimizer_gd.hpp  l2_optimizer_optim.hpp  newtons_method.hpp  optimizer.hpp  optimizer_adam.hpp  optimizer_base.hpp  optimizer_gd.hpp  optimizer_l_bfgs.hpp  optimizer_nlopt.hpp  optimizer_optim.hpp  optimizer_sgd.hpp  options.hpp  root_finding_newton.hpp  solver_base.hpp
legacy/: newtons_method_v1.cpp  newtons_method_v1.hpp  newtons_method_v3.cpp  newtons_method_v3.hpp  optimizer_nlopt.cpp  optimizer_nlopt.hpp
src/: analytic.cpp  helpers.cpp  l2_optimizer_adam.cpp  l2_optimizer_base.cpp  l2_optimizer_gd.cpp  l2_optimizer_optim.cpp  newtons_method.cpp  optimizer.cpp  optimizer_adam.cpp  optimizer_base.cpp  optimizer_gd.cpp  optimizer_l_bfgs.cpp  optimizer_nlopt.cpp  optimizer_optim.cpp  optimizer_sgd.cpp  root_finding_newton.cpp  solver_base.cpp
test/: CMakeLists.txt
test/legacy/: test_5d_l_bfgs.cpp  test_5d_newtons_method_v1.cpp  test_5d_newtons_method_v3.cpp
test/output/l2_adam_5d/: l2_adam_5d.nb
test/output/root_find_newton_5d/: root_find_newton_5d.nb
test/output/test_5d_adam/: test_5d_adam.nb
test/src/: analytic_3d.cpp  common.hpp  l2_adam_5d.cpp  l2_gd_3d.cpp  l2_gd_5d.cpp  l2_optim_5d.cpp  main.cpp  root_find_newton_5d.cpp  test_3d_gd.cpp  test_3d_sgd.cpp  test_5d_adam.cpp  test_5d_gd.cpp  test_5d_l_bfgs.cpp  test_5d_newtons_method.cpp  test_5d_nlopt.cpp  test_5d_optim.cpp  test_5d_sgd.cpp
